@@ -1,0 +1,66 @@
+<?xml version="1.0" encoding="utf-8"?>
+<!--
+Aeotec ZW141 Nano Shutter, base on Engineering Spec 1/4/2018
+Product Type ID: EU=0x00, US=0x01, AU=0x02 CN=0x1D
+
+-->
+<Product xmlns='http://code.google.com/p/open-zwave/'>
+    <!-- Configuration Parameters -->
+    <CommandClass id="112">
+		<Value type="byte" index="35" genre="config" label="Set the moving time" min="1" max="127" units="seconds" value="30">
+			<Help>
+				Set the moving time from up (left) to down (right) for curtain.
+			</Help>
+		</Value>
+        <Value type="list" index="80" genre="config" label="Notification report association group 1" units="" size="1" value="0">
+            <Help>
+                To set which report would be sent to the associated nodes in association group 1 when the state of output load is changed.
+                Note: When just only one channel load state is changed, the report message Basic Report CC would be Multi Channel encapsulated.
+            </Help>
+            <Item label="Nothing" value="0"/>
+            <Item label="Basic Report CC" value="1"/>
+        </Value>
+        <Value type="list" index="85" genre="config" label="External switch operation mode" units="" size="1" value="0">
+            <Help>
+                Set the operation mode of external switch.
+                For detailed instructions for Operation Mode 1 and 2, see end of this table.
+            </Help>
+            <Item label="Operation Mode 1" value="0"/>
+            <Item label="Operation Mode 2" value="1"/>
+        </Value>
+        <Value type="list" index="120" genre="config" label="Set the external switch mode for S1" units="" min="0" max="4" size="1" value="0">
+            <Help>When the mode is determined, this mode value will not be reset after exclusion</Help>
+            <Item label="Unidentified" value="0"/>
+			<Item label="Reserved" value="1"/>
+			<Item label="3-way switch" value="2"/>
+			<Item label="Push button" value="3"/>
+			<Item label="Automatic identification mode" value="4"/>
+        </Value>
+        <Value type="list" index="121" genre="config" label="Set the external switch mode for S2" units="" min="0" max="4" size="1" value="0">
+            <Help>When the mode is determined, this mode value will not be reset after exclusion</Help>
+            <Item label="Unidentified" value="0"/>
+			<Item label="Reserved" value="1"/>
+			<Item label="3-way switch" value="2"/>
+			<Item label="Push button" value="3"/>
+			<Item label="Automatic identification mode" value="4"/>
+        </Value>
+        <Value type="list" index="252" genre="config" label="Configuration Locked" units="" min="0" max="1" size="1" value="0">
+            <Help>Enable/disable Configuration Locked</Help>
+            <Item label="Disable" value="0"/>
+            <Item label="Enable" value="1"/>
+        </Value>
+        <Value type="list" index="255" genre="config" label="Reset To Factory Defaults" size="4" value="1" write_only="true">
+            <Help>Reset to factory defaults</Help>
+            <Item label="Reset to factory default setting" value="0"/>
+            <Item label="Normal" value="1"/>
+            <Item label="Reset to factory default setting and removed from the z-wave network" value="1431655765"/>
+        </Value>
+    </CommandClass>
+    <!-- Association Groups -->
+    <CommandClass id="133">
+        <Associations num_groups="2">
+            <Group index="1" max_associations="5" label="Lifeline"/>
+            <Group index="2" max_associations="5" label="Retransmit"/>
+        </Associations>
+    </CommandClass>
+</Product>
